[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#serde = "1.0.130"
serde_json = "1.0"
sha2 = "0.10.7"
#chrono = "0.4.0"        # Affected by RUSTSEC-2020-0159
#hyper = "0.12.0"        # Affected by RUSTSEC-2021-0079
#openssl = "0.10.0"      # Affected by multiple vulnerabilities

